# ddplayer

./: .gitignore  README.md  gradlew  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dengchu/simple_player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_utils.h  jvideo_player.cpp  jvideo_player.h  video_player_jni.cpp
app/src/main/cpp/ddplayer/: av_audio_decoder.cpp  av_audio_decoder.h  av_audio_output.cpp  av_audio_output.h  av_clock.cpp  av_clock.h  av_cmdutils.cpp  av_cmdutils.h  av_decoder_util.cpp  av_decoder_util.h  av_frame_queue.cpp  av_frame_queue.h  av_message.h.h  av_message_loop.cpp  av_message_loop.h  av_packet_queue.cpp  av_packet_queue.h  av_player.cpp  av_player.h  av_player_def.h  av_read_input.cpp  av_read_input.h  av_thread_util.cpp  av_thread_util.h  av_video_decoder.cpp  av_video_decoder.h  av_video_output.cpp  av_video_output.h  ffplayer_option.cpp  ffplayer_option.h
app/src/main/java/com/example/dengchu/simple_player/: MainActivity.java  VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/dengchu/simple_player/: ExampleUnitTest.java
distribution/ffmpeg/: config.h
distribution/ffmpeg/include/libavcodec/: avcodec.h
distribution/ffmpeg/include/libavformat/: avformat.h  avio.h  internal.h  url.h
distribution/ffmpeg/include/libavutil/: avstring.h  bprint.h  frame.h  mem.h  opt.h  samplefmt.h  threadmessage.h  timecode.h
gen_libs/: build.gradle
gen_libs/src/main/cpp/: CMakeLists.txt
gen_libs/src/main/cpp/ijkj4a/: CMakeLists.txt
gen_libs/src/main/cpp/ijkj4a/j4a/: j4a_allclasses.loader.h
gen_libs/src/main/cpp/ijksdl/: CMakeLists.txt  ijksdl_aout.c
gen_libs/src/main/cpp/ijkyuv/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
